hard-gists/3699696/run.log
=== Docker Run Log for 3699696 ===
Started at: Mi 29. Okt 13:57:07 CET 2025

[2025-10-29 13:57:07] START: Running container for 3699696
[2025-10-29 13:57:08] SUCCESS: Container d38539aa3129c6550695b5f435fb6ecb07aa89da4d97d4362f3df79dc02ecca0 started for 3699696
=== Container logs for 3699696 ===
  File "/snippet.py", line 61
    print line
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3699696 ===
[2025-10-29 13:57:10] INFO: Container d38539aa3129c6550695b5f435fb6ecb07aa89da4d97d4362f3df79dc02ecca0 has stopped
